[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abe-radditmq"
version = "0.0.0"
description = "🔗 A backend component as message queue component by RabbitMQ."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "backend",
    "queue",
    "message-queue",
    "implementation",
    "implement-layer",
    "rabbitmq",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
#    "Programming Language :: Python :: 3.14",  # TODO: Because of PyO3's maximum supported version (3.13)
]
dependencies = [
    "abstract-backend>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/abe-rabbitmq"
Repository = "https://github.com/Chisanan232/abe-rabbitmq"
Documentation = "https://chisanan232.github.io/abe-rabbitmq/"
Changelog = "https://chisanan232.github.io/abe-rabbitmq/docs/next/changelog"
"Project Management" = "https://app.clickup.com/9018752317/v/f/901810147051/90184991515"

[project.entry-points."abe.backends.message_queue.service"]
mq_name = "abe_plugin.backends.message_queue.service.your_queue_service:YourMessageQueueBackend"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<8",
    "coverage~=7.10",
    "pytest-rerunfailures>=14.0,<17",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<2",
    "python-dotenv>=1.0.1,<2",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
packages = ["abe_plugin"]
#artifacts = ["abe_plugin/py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["abe_plugin"]
#artifacts = ["abe_plugin/py.typed"]
